<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/maps"
        android:icon="@drawable/ic_map"
        android:title="@string/Maps"
        app:showAsAction="always" />

<!--    <item-->
<!--        android:id="@+id/setting"-->
<!--        android:icon="@drawable/ic_setting"-->
<!--        android:title="@string/Setting"-->
<!--        app:showAsAction="ifRoom"/>-->


    <group android:menuCategory="container">
            <item
                android:id="@+id/languange"
                android:icon="@drawable/ic__language_24"
                android:title="@string/languange"
                app:showAsAction="never" />

            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_logout_24"
                android:title="@string/logout"
                app:showAsAction="never" />

    </group>
</menu>